force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fileforcem1__sFiles_SharePoint_Column__c.object-meta.xml
<CustomObject>
    <description>This object keeps track of settings associated with SharePoint Columns.</description>
    <label>sFiles SharePoint Column</label>
    <nameField>
        <displayFormat>SPC-{0000}</displayFormat>
        <label>sFiles SharePoint Column</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>sFiles SharePoint Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>