force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Choices__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Choices__c</fullName>
    <description>If Column Type is &quot;Choice&quot; input the choice values in this field as comma separated values.</description>
    <label>Choices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>