force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Default_Value__c</fullName>
    <description>The default value for the field. If put inside square brackets [], the value will be calculated from the record sFiles is on.</description>
    <label>Default Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>