force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Label__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Label__c</fullName>
    <description>What label to display to the user for the column name.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>