force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Name__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Name__c</fullName>
    <description>SharePoint Column Name</description>
    <inlineHelpText>To get the column name from SharePoint, open the column, and in the URL grab the name after the &quot;Field=&quot; URL parameter.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>