force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Object_Settings_Name__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Object_Settings_Name__c</fullName>
    <description>The name of the sFiles SharePoint Object Settings</description>
    <label>Object Settings Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>