force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/fields/fileforcem1__Order__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Order__c</fullName>
    <description>The order that the field will be displayed in the sharePoint column upload</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>