force-app/main/default/objects/fileforcem1__sFiles_SharePoint_Column__c/listViews/fileforcem1__sFiles_SharePoint_Columns.listView-meta.xml
<ListView>
    <fullName>fileforcem1__sFiles_SharePoint_Columns</fullName>
    <columns>NAME</columns>
    <columns>fileforcem1__Label__c</columns>
    <columns>fileforcem1__Name__c</columns>
    <columns>fileforcem1__Type__c</columns>
    <columns>fileforcem1__Object_Settings_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>sFiles SharePoint Columns</label>
</ListView>